Update HelloWorldApplication.java